Added resources. Build.xml fixes.

--- a/ant.properties
+++ b/ant.properties
@@ -15,6 +15,8 @@ tgzfile.release                   NextApp_Echo2_Chart.tgz
 
 dir.temp                          tmp
 
+dir.resource                      resource
+
 dir.src                           src
 dir.src.app                       ${dir.src}/app/java
 dir.src.webcontainer              ${dir.src}/webcontainer/java
