--- a/build.xml
+++ b/build.xml
@@ -158,7 +158,13 @@
                 WindowTitle="${javadoc.windowtitle}"
                 DocTitle="${javadoc.doctitle.app}"
                 Overview="${dir.src.app}/overview.html"
-                Header="${javadoc.header}"/>
+                Header="${javadoc.header}">
+            <classpath>
+                <pathelement path="${echo2.app.lib.jar}"/>
+        		<pathelement path="${jcommon.lib.jar}"/>
+        		<pathelement path="${jfreechart.lib.jar}"/>
+            </classpath>
+        </javadoc>
     </target>
     
     <target name="doc.app.private"
@@ -171,14 +177,20 @@
                 DocTitle="${javadoc.doctitle.app}"
                 Overview="${dir.src.app}/overview.html"
                 Header="${javadoc.header}"
-                Private="true"/>
+                Private="true">
+            <classpath>
+                <pathelement path="${echo2.app.lib.jar}"/>
+        		<pathelement path="${jcommon.lib.jar}"/>
+        		<pathelement path="${jfreechart.lib.jar}"/>
+            </classpath>
+        </javadoc>
     </target>
     
    
     <target name="doc.webcontainer"
             description="Create public/protected JavaDoc Document for Echo File Transfer Web Container">
         <mkdir dir="${dir.javadoc.webcontainer.public}"/>
-        <javadoc sourcepath="${dir.src.app};${dir.src.webcontainer}" packagenames="nextapp.echo2.filetransfer.webcontainer.*" 
+        <javadoc sourcepath="${dir.src.app};${dir.src.webcontainer}" packagenames="nextapp.echo2.chart.webcontainer.*" 
                 stylesheetfile="${javadoc.cssfile}"
                 destdir="${dir.javadoc.webcontainer.public}" 
                 WindowTitle="${javadoc.windowtitle}"
@@ -187,6 +199,11 @@
                 Header="${javadoc.header}">
             <classpath>
                 <pathelement path="${servlet.lib.jar}"/>
+                <pathelement path="${echo2.app.lib.jar}"/>
+                <pathelement path="${echo2.webcontainer.lib.jar}"/>
+                <pathelement path="${echo2.webrender.lib.jar}"/>
+        		<pathelement path="${jcommon.lib.jar}"/>
+        		<pathelement path="${jfreechart.lib.jar}"/>
             </classpath>
         </javadoc>
     </target>
@@ -194,7 +211,7 @@
     <target name="doc.webcontainer.private"
             description="Create private JavaDoc Document for Echo Web Application Container">
         <mkdir dir="${dir.javadoc.webcontainer.private}"/>
-        <javadoc sourcepath="${dir.src.app};${dir.src.webcontainer}" packagenames="nextapp.echo2.webcontainer.*" 
+        <javadoc sourcepath="${dir.src.app};${dir.src.webcontainer}" packagenames="nextapp.echo2.chart.webcontainer.*" 
                 stylesheetfile="${javadoc.cssfile}"
                 destdir="${dir.javadoc.webcontainer.private}" 
                 WindowTitle="${javadoc.windowtitle}"
@@ -204,6 +221,11 @@
                 Private="true">
             <classpath>
                 <pathelement path="${servlet.lib.jar}"/>
+                <pathelement path="${echo2.app.lib.jar}"/>
+                <pathelement path="${echo2.webcontainer.lib.jar}"/>
+                <pathelement path="${echo2.webrender.lib.jar}"/>
+        		<pathelement path="${jcommon.lib.jar}"/>
+        		<pathelement path="${jfreechart.lib.jar}"/>
             </classpath>
         </javadoc>
     </target>
