--- a/ant.properties
+++ b/ant.properties
@@ -46,7 +46,7 @@ dir.dist.testapp                  ${dir.dist}/testapp
 
 dir.release                       release
 
-javadoc.version                   v2.0.alpha1
+javadoc.version                   v2.1.0
 javadoc.windowtitle               NextApp . Echo2 Chart . API Specification
 javadoc.doctitle.app              Echo2 Chart <br>API Specification
 javadoc.doctitle.webcontainer     Echo2 Chart Container<br>API Specification
