--- a/ant.properties
+++ b/ant.properties
@@ -1,3 +1,6 @@
+ant.build.javac.source 1.4
+ant.build.javac.target 1.4
+
 servlet.lib.jar                   ${env.SERVLET_LIB_JAR}
 echo2.app.lib.jar                 ${env.ECHO2_LIB_HOME}/Echo2_App.jar
 echo2.webcontainer.lib.jar        ${env.ECHO2_LIB_HOME}/Echo2_WebContainer.jar
